[package]
name = "uwuify"
version = "0.1.0"
authors = ["c0deb0t <daniel.liu02@gmail.com>"]
edition = "2018"
license = "MIT"
description = "fastest text uwuifier in the west"
homepage = "https://github.com/Daniel-Liu-c0deb0t/uwu"
repository = "https://github.com/Daniel-Liu-c0deb0t/uwu"
readme = "README.md"
keywords = ["SIMD", "uwu", "owo", "cli"]
categories = ["algorithms", "hardware-support", "text-processing", "command-line-utilities"]

[dependencies]
clap = { version = "^2.33", optional = true }
owo-colors = { version = "1.3", optional = true }
thiserror = { version = "1", optional = true }
parking_lot = "^0.11"

[features]
default = ["bin"]
bin = ["clap", "owo-colors", "thiserror"]

[profile.release]
lto = true

[lib]
name = "uwuifier"
path = "src/lib.rs"

[[bin]]
name = "uwuify"
path = "src/main.rs"
required-features = ["bin"]
